修改docker配置
